Version 23.9.2 with autotests
